--- a/style.css
+++ b/style.css
@@ -149,6 +149,22 @@ html{
   background-color: #4174ff;
 }
 
+/* The dots/bullets/indicators */
+.dot2 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 100%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot2:hover {
+  background-color: #4174ff;
+}
+
 /* Fading animation */
 
 
@@ -259,4 +275,29 @@ margin-top: 180px;
   font-size: 20px;
   padding-right: 8rem;
   text-align: justify;
+}
+/*tes*/
+.example-desc {
+  margin:3px 0;
+  padding:5px;
+}
+
+#carousel {
+  width:100%;
+  height:280px;
+  position:relative;
+  clear:both;
+  overflow:hidden;
+  background:#FFF;
+}
+#carousel img {
+  visibility:hidden; /* hide images until carousel can handle them */
+  cursor:pointer; /* otherwise it's not as obvious items can be clicked */
+}
+.round{
+  border-radius: 100%;
+}
+
+.profile{
+  padding-top: 5rem;
 }
