--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+body {
+  margin: 0;
+}
+img {
+  vertical-align: middle;
+}
 html{
   scroll-behavior: smooth;
+  margin:0;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+section{
+  height: 100%;
 }
 /* Slideshow container */
 .slideshow-container {
@@ -123,7 +135,9 @@ html{
   width: 100%;
   text-align: center;
 }
-
+.center{
+text-align: center !important;
+}
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -135,7 +149,11 @@ html{
 
 .badge{
   margin-left: 4rem;
-  font-size: 35px !important;
+  font-size: 30px !important;
+}
+
+.disable{
+  display: none;
 }
 
 /* The dots/bullets/indicators */
@@ -143,11 +161,15 @@ html{
   cursor: pointer;
   height: 8px;
   width: 85px;
-  margin: 0 1px;
+  margin: 0 2px;
   background-color: #bbb;
   border-radius: 35px;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  transition: 0.6s ease;
+}
+.dot:hover{
+  transition: 0.6s ease;
+  width: 100px;
 }
 
 .active, .dot:hover {
@@ -163,7 +185,17 @@ html{
   background-color: #bbb;
   border-radius: 100%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  vertical-align: middle;
+  transition: 0.3s ease;
+}
+.dot2:hover{
+  transition: 0.3s ease;
+  width: 20px;
+  height: 20px;
+}
+#indicator .active{
+  width: 20px;
+  height: 20px;
 }
 
 .active, .dot2:hover {
@@ -227,7 +259,7 @@ a {
   text-align: center;
   font-size: 10rem;
   position: absolute;
-  margin-left: 20.5rem;
+  left: 25%;
   padding-top: 40px;
   z-index: 0;
   transition: 0.5s ease;
@@ -266,15 +298,6 @@ a {
   padding-top: 34rem;
   z-index: 20;
 }
-
-body { 
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-}
-
 .content .primaryfont{
 font-size: 40px;
 margin-top: 180px;
@@ -304,6 +327,7 @@ margin-top: 180px;
 }
 
 .profile{
+  padding-top: 0.5rem;
   text-align: center;
 }
 
@@ -314,4 +338,73 @@ margin-top: 180px;
 .tab{
   padding: 0 30rem;
   text-align: center;
+}
+
+#textbox i{
+font-style: normal;
+}
+
+.video-mask{
+  border-radius: 35px; 
+  overflow: hidden;
+  z-index: 20;
+}
+
+.vid{
+  position: absolute;
+  padding-top: 3rem;
+  left: 20%;
+}
+
+.grad{
+  height: 30rem;
+background: linear-gradient(90deg, #005B97 24%, #00A5F4 79%);
+}
+
+.p{
+  padding-top: 16rem;
+}
+
+.right{
+  text-align: right !important;
+}
+.left{
+  text-align: left !important;
+}
+.p .secondaryfont{
+  font-size: 4rem;
+  text-align: center;
+}
+.p .secondaryfont p{
+  margin-block-start: 0;
+  font-size: 20px;
+}
+
+.jar1, .jar2{
+margin-top: 10rem;
+}
+
+.jar1{
+  position: absolute;
+  width: 20%;
+  
+}
+
+.jar2{
+  position: absolute;
+  width: 20%;
+  left: 80%
+}
+
+.circle {
+  height: 100px;
+  width: 100px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 39rem;
+}
+
+.secondaryfont i{
+  font-style: normal;
 }
