Major Update fontfix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'gilroyextrabold';
+  src: url('gilroy-extrabold-webfont.woff2') format('woff2'),
+       url('gilroy-extrabold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'gilroylight';
+  src: url('gilroy-light-webfont.woff2') format('woff2'),
+       url('gilroy-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 * {box-sizing: border-box}
 body {
   margin: 0;
@@ -13,14 +27,6 @@ html{
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
-}
-@font-face {
-  font-family: 'gilroy-extrabold';
-  src: url("gilroy-extrabold.otf") format("opentype");
-}
-@font-face {
-  font-family: 'gilroy-light';
-  src: url("gilroy-light.otf") format("opentype");
 }
 section{
   height: 100%;
@@ -273,11 +279,11 @@ a {
 }
 
 .primaryfont{
-  font-family: 'gilroy-extrabold';
+  font-family: 'gilroyextrabold';
 }
 
 .secondaryfont{
-  font-family: 'gilroy-light';
+  font-family: 'gilroylight';
   font-size: 20px;
 }
 
