--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ html{
   -webkit-user-select: none;
   -ms-user-select: none;
 }
-section{
-  height: 100%;
+section {
+  display: block;
+  width: 100%;
 }
 /* Slideshow container */
 .slideshow-container {
@@ -55,7 +56,7 @@ section{
 }
 .prev, .next {
   transition: 0.5s ease;
-  padding-left: 5rem;
+  padding-left: 4rem;
   cursor: pointer;
   position: absolute;
   top: 45%;
@@ -68,9 +69,8 @@ section{
 /* Position the "next button" to the right */
 .next {
   padding-left: 0rem;
-  padding-right: 5rem;
+  padding-right: 2rem;
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 .kolom {
   display: -ms-flexbox;
@@ -251,8 +251,8 @@ text-align: center !important;
 .white{
   color: white;
 }
-.red{
-  color: red;
+.black{
+  color: white;
 }
 a {
   text-decoration: none;
@@ -261,7 +261,7 @@ a {
   cursor: default;
   display: block;
   text-align: center;
-  font-size: 10rem;
+  font-size: 10rem !important;
   position: absolute;
   left: 25%;
   padding-top: 40px;
@@ -284,11 +284,13 @@ a {
 
 .primaryfont{
   font-family: 'gilroyextrabold';
+  font-size: 3rem;
 }
 
 .secondaryfont{
   font-family: 'gilroylight';
   font-size: 20px;
+  font-weight: 600;
 }
 
 .wrapper{
@@ -303,7 +305,6 @@ a {
   z-index: 20;
 }
 .content .primaryfont{
-font-size: 40px;
 margin-top: 180px;
 }
 
@@ -331,13 +332,9 @@ margin-top: 180px;
 }
 
 .profile{
-  padding-top: 0.5rem;
+  padding-top: 1px;
   text-align: center;
 }
-
-.profile .primaryfont{
-  font-size: 40px;
-  }
 
 .tab{
   padding: 0 30rem;
@@ -382,17 +379,19 @@ margin: 0;
 }
 
 .grad{
-  height: 30rem;
-background: linear-gradient(90deg, #005B97 0%, #00A5F4 100%);
+  margin-top: 5rem;
+  height: 100%;
+  background: url(img/grad.png);
 }
 .grad2{
 z-index: -1;
 height: 150vh;
-background: linear-gradient(90deg, #005B97 0%, #00A5F4 100%);
+background: url(img/grad.png);
+background-size: cover;
 }
 
 .p{
-  padding-top: 16rem;
+  padding-top: 30rem;
 }
 
 .right{
@@ -402,7 +401,8 @@ background: linear-gradient(90deg, #005B97 0%, #00A5F4 100%);
   text-align: left !important;
 }
 .p .secondaryfont{
-  font-size: 4.5rem;
+  padding-top: 1rem;
+  font-size: 4rem;
   text-align: center;
 }
 .p .secondaryfont p{
@@ -411,7 +411,6 @@ background: linear-gradient(90deg, #005B97 0%, #00A5F4 100%);
 }
 
 .jar1, .jar2{
-margin-top: 10rem;
 }
 
 .jar1{
@@ -450,14 +449,12 @@ margin-top: 10rem;
 .yearslider{
   font-size: 28px; ; position: absolute; cursor: pointer; 
 }
-
 .againts{
   margin: 0;
   font-size: 2.5rem;
   text-align: right;
   margin-right: 8rem;
-  margin-top: 8rem;
-  padding-bottom: 2rem;
+  padding-top: 4rem;
 }
 .againts p{
   margin: 10px;
@@ -477,11 +474,20 @@ margin-top: 10rem;
   font-size: 1.5rem;
 }
 
+.bgwhite{
+  z-index: -100;
+  background-color: white;
+}
+
 .bgsection{
   z-index: -5;
   position: absolute;
-  margin-top: 8rem;
   width: 30%;
+}
+.bgsection2{
+  z-index: -6;
+  position: absolute;
+  width: 100%;
 }
 .slidedown{
   cursor: pointer;
@@ -497,4 +503,24 @@ margin-top: 10rem;
 .foot{
   height: 26rem;
   max-width: 100%;
+}
+
+.m-0{
+  margin: 0px;
+}
+
+.btn{
+transition: 0.3s ease;
+padding: 0.5rem 2rem;
+border: solid black;
+border-radius: 25px;
+font-family: 'gilroylight';
+font-size: 16px;
+font-weight: 600;
+color: black;
+}
+
+.btn:hover{
+  transition: 0.3s ease;
+  border-radius: 0px;
 }
