--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* GANTI SCROLL */
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: #009EEB;
+  border-radius: 12px;
+}
 /* FONT */
 @font-face {
 font-family: 'Gilroy-Bold';
@@ -63,6 +71,7 @@ html{
 }
 section {
   display: block;
+  position: relative;
   height: auto;
   min-height: 100vh;
 }
@@ -74,6 +83,13 @@ section {
   margin: auto;
 }
 
+.centersolute{
+position: absolute;
+margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;
+}
 /* Next & previous buttons */
 .prev img, .next img{
   display: block;
@@ -212,7 +228,7 @@ text-align: center !important;
 }
 
 .badge{
-  margin-left: 90px;
+  margin-left: 85px;
   font-size: 34px !important;
 }
 
@@ -234,7 +250,7 @@ text-align: center !important;
 }
 .dot:hover{
   transition: 0.6s ease;
-  width: 100px;
+  width: 110px;
 }
 /* The dots/bullets/indicators */
 .dot2 {
@@ -247,12 +263,12 @@ text-align: center !important;
   border-radius: 100%;
   display: inline-block;
   vertical-align: middle;
-  transition: 0.3s ease;
+  transition: 0.4s ease;
 }
 .dot2:hover{
-  transition: 0.3s ease;
-  width: 14;
-  height: 14;
+  transition: 0.4s ease;
+  width: 18;
+  height: 18;
 }
 .dot3 {
   border-style: none;
@@ -264,10 +280,10 @@ text-align: center !important;
   border-radius: 100%;
   display: inline-block;
   vertical-align: middle;
-  transition: 0.3s ease;
+  transition: 0.4s ease;
 }
 .dot3:hover{
-  transition: 0.3s ease;
+  transition: 0.4s ease;
   width: 16;
   height: 16;
 }
@@ -285,15 +301,15 @@ text-align: center !important;
   background-color: rgb(190, 190, 190);
   display: inline-block;
   vertical-align: middle;
-  transition: 0.3s ease;
+  transition: 0.s ease;
 }
 #indicator .active{
   width: 18px;
   height: 18px;
 }
 
-.active, .dot2:hover, .dot:hover{
-  background-color: #0089D1;
+.active, .dot2:hover, .dot:hover, .dot3:hover{
+  background-color: #009EEB;
 }
 .active2, .yearslider:hover{
   color:white;
@@ -313,9 +329,16 @@ text-align: center !important;
   to {opacity: 1}
 }
 .arrow{
-  width: 90%;
-  padding-left: 5rem;
+cursor: pointer;
+transition: 0.5s ease;
+width: 10%;
+margin-left: 20px;
+padding-bottom: 10rem
 }
+.arrow:hover{
+  transition: 0.5s ease;
+  padding-top: 2rem;
+  }
 
 .navbar{
   font-size: 20px ;
@@ -339,7 +362,7 @@ a {
 }
 .title{
   cursor: default;
-  display: block;
+  display: inline-block;
   text-align: center;
   font-size: 10rem !important;
   position: absolute;
@@ -436,11 +459,19 @@ margin-top: 160px;
   cursor:pointer; /* otherwise it's not as obvious items can be clicked */
 }
 .round{
+  transition: 0.4s ease;
   border-radius: 100%;
+  border-style: solid;
+  border-color: white;
+}
+.round:hover{
+  transition: 0.4s ease;
+  border-width: 10px;
+  border-style: solid;
+  border-color: white;
 }
 
 .profile{
-  padding-top: 1px;
   text-align: center;
 }
 
@@ -468,7 +499,7 @@ font-size: 18px;
 
 .tab2 p{
 text-align: center !important;
-font-size: 24px;
+font-size: 18px;
 margin: 0;
 }
 
@@ -476,17 +507,17 @@ margin: 0;
   font-size: 2.5rem;
   margin-bottom: 0;
 }
-
-.video-mask{
-  border-radius: 35px; 
-  overflow: hidden;
-  z-index: 20;
+.mfp-hide {
+  display: none!important;
 }
-
-.vid{
-  position: absolute;
-  padding-top: 3rem;
-  left: 20%;
+.video{
+  transition: 0.4s ease;
+  position:absolute;
+  margin-top:72.4rem;
+  margin-left: 815px;
+}
+.video img{
+  width: 65%;
 }
 
 .grad{
@@ -568,15 +599,22 @@ background-size: cover;
 }
 .againts2{
   margin: 0;
-  text-align: left;
-  margin-left: 8rem;
-  padding-top: 4rem;
+  text-align: justify;
+  margin-left: 12rem;
+  padding-top: 8rem;
 }
 .againts p{
   margin: 0px;
   
 }
-
+.title3{
+  font-family: 'Gilroy-Medium';
+  letter-spacing: 1;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+  margin-left: 10px;
+  text-align: left;
+}
 .alert{
   padding: 0 28rem;
   text-align: center;
@@ -618,16 +656,17 @@ background-size: cover;
 }
 
 .foot{
-  height: 26rem;
+  bottom: 0;
+  position:absolute;
   max-width: 100%;
+  z-index:-2;
 }
-
 .m-0{
   margin: 0px;
 }
 
 .btn{
-transition: 0.3s ease;
+transition: 0.4s ease;
 padding: 0.5rem 2rem;
 border: solid black;
 border-radius: 25px;
@@ -647,10 +686,63 @@ color: black;
 }
 
 .btn:hover{
-  transition: 0.3s ease;
+  transition: 0.4s ease;
   border-radius: 0px;
 }
 .yearslider{
   font-size: 28px; margin-top: 55px; position: absolute; cursor: pointer;;
+
+}
+
+.blocker {
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  width: 100%; height: 100%;
+  z-index: 10;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.75);
+  text-align: center;
+}
+.blocker:before{
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.05em;
+}
+.blocker.behind {
+  background-color: transparent;
+}
+.modal {
+  display: none;
+  vertical-align: middle;
+  position: relative;
+  z-index: 20;
+  max-width: 1000;
+  box-sizing: border-box;
+  width: 100%;
+  background: black;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.modal a.close-modal {
+  position: absolute;
+  top: -12.5px;
+  right: -12.5px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  text-indent: -9999px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('img/close.png');
 
 }
