--- a/style.css
+++ b/style.css
@@ -693,7 +693,9 @@ color: black;
   font-size: 28px; margin-top: 55px; position: absolute; cursor: pointer;;
 
 }
-
+.arial{
+  font-family: arial;
+}
 .blocker {
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
@@ -745,4 +747,11 @@ color: black;
   background-position: center center;
   background-image: url('img/close.png');
 
+}
+@keyframes fadeIn { 
+  from { opacity: 0; } 
+}
+
+.animate-flicker {
+    animation: fadeIn 12s infinite alternate;
 }
