--- a/style.css
+++ b/style.css
@@ -49,13 +49,11 @@ src: local('Gilroy-Regular'), url('Gilroy-Regular.woff') format('woff');
 
 * {box-sizing: border-box}
 body {
-  font-family: 'Gilroy-medium';
+  font-family: Arial, Helvetica, sans-serif;
   overflow: auto;
   overflow-x: hidden;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+  margin: 0 auto;
+  height: 100%;
 }
 img {
   vertical-align: middle;
@@ -68,6 +66,7 @@ html{
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  height: 100%;
 }
 section {
   display: block;
@@ -295,7 +294,6 @@ text-align: center !important;
 }
 .dot4 {
   border-style: none;
-  cursor: pointer;
   height: 2.5px;
   width: 28px;
   background-color: rgb(190, 190, 190);
@@ -385,6 +383,13 @@ a {
   margin:0;
   font-size: 40pt;
   padding-left: 8rem;
+}
+.title3 p{
+  font-size: 58pt;
+  
+}
+.bisnis{
+  margin-left: 4rem !important;
 }
 
 .particle{
@@ -590,6 +595,10 @@ background-size: cover;
 .yearslider{
   font-size: 28px; ; position: absolute; cursor: pointer; 
 }
+#againts{
+  border-top: solid white;
+}
+
 .againts{
   margin: 0;
   font-size: 2.5rem;
@@ -600,8 +609,8 @@ background-size: cover;
 .againts2{
   margin: 0;
   text-align: justify;
-  margin-left: 12rem;
-  padding-top: 8rem;
+  margin-left: 11.5rem;
+  padding-top: 7rem;
 }
 .againts p{
   margin: 0px;
@@ -667,11 +676,11 @@ background-size: cover;
 
 .btn{
 transition: 0.4s ease;
-padding: 0.5rem 2rem;
-border: solid black;
+padding: 0.8rem 1rem;
+padding-right: 24rem;
+border: solid rgb(170, 170, 170);
+border-width: 1.4px;
 border-radius: 25px;
-font-family: 'gilroylight';
-font-size: 16px;
 font-weight: 600;
 color: black;
 }
@@ -684,17 +693,12 @@ color: black;
 .jt2{
   padding-left: 7.5rem;
 }
-
-.btn:hover{
-  transition: 0.4s ease;
-  border-radius: 0px;
-}
 .yearslider{
-  font-size: 28px; margin-top: 55px; position: absolute; cursor: pointer;;
+  font-size: 28px; margin-top: 55px; position: absolute; cursor: pointer;
 
 }
 .arial{
-  font-family: arial;
+  font-family: Helvetica, sans-serif;
 }
 .blocker {
   position: fixed;
